<resources>
    <string name="app_name">BGG</string>
    <string name="developers">BGG - Aplication developed for the Curricular Unit of \"Programação em Dispositivos Móveis\" (Programming in Mobile Devices)</string>
    <string name="developedBy">Developed By :</string>
    <string name="teacher">"Teacher : "</string>
    <string name="api">The API used to provide the data for the games is the Board Game Atlas API</string>
    <string name="search_text">Insert Text</string>
    <string name="search_games">Search Games</string>
    <string name="search_company_games">Search Company Games</string>
    <string name="search_game_artist">Search Game Artist</string>
    <string name="popular_games">Popular Games</string>
    <string name="game_creators">Game Creators :</string>
    <string name="game_name">Game Name :</string>
    <string name="game_year">Game Year:</string>
    <string name="minimum_number_of_players">Minimum Number of Players :</string>
    <string name="minimum_age">Minimum Age :</string>
    <string name="description">Description :</string>
    <string name="maximum_number_of_players">Maximum Number Of Players :</string>
    <string name="primary_publisher">Primary Publisher :</string>
    <string name="average_rate">Average Rate :</string>
    <string name="game_rules">Game Rules :</string>
    <string name="searchGamesToast">Please, fill search text with the game name</string>
    <string name="searchCompanyToast">Please, fill search text with the company name</string>
    <string name="searchArtistToast">Please, fill search text with the artist name</string>
    <string name="noOfficialUrl">No official page</string>
    <string name="button">Personalised Lists</string>
    <string name="list_name_hint">List Name</string>
    <string name="listToast">Please, fill the edit text with the personalised list name</string>
    <string name="add_to_a_list">Add to List</string>
    <string name="lists_to_add_game">Lists to add Game</string>
    <string name="delete">delete</string>
    <string name="favorites">Favorites</string>
    <string name="favoriteName">name</string>
    <string name="publisher">publisher</string>
    <string name="designer">designer</string>
    <string name="mechanics">mechanics</string>
    <string name="categories">categories</string>
    <string name="createfavorite">Create Favorite</string>
    <string name="saveButton">Save Choices</string>
    <string name="favoriteToast" >Insert Favorite Name</string>
    <string name="missingFavoriteInformation" >Insert at least two Favorite Informations</string>
    <string name="channel_name">FavoritesChannel</string>
    <string name="channel_description">Channel to notificate updates on User Favorites\\</string>
    <string name="saveImageAlertDialog">Save Image</string>
    <string name="saveImageAlertDialogButton">Save</string>
    <string name="cancelAlertDialogButton">Cancel</string>
    <string name="noPermissionToSaveImage">No permission to save image !!!</string>
    <string name="sucessSavingPicture">Picture Saved</string>
    <string name="InsucessSavingPicture">Failed to save picture</string>
</resources>
