<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="248dp"
            android:layout_height="223dp"
            app:srcCompat="@drawable/icon" />

        <EditText
            android:id="@+id/searchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/search_text"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Button
            android:id="@+id/searchGames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_games" />


        <Button
            android:id="@+id/searchCompanyGames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_company_games" />


        <Button
            android:id="@+id/searchGameArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_game_artist" />

        <Button
            android:id="@+id/popularGames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular_games" />

        <Button
            android:id="@+id/personalisedGamesList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button" />

        <Button
            android:id="@+id/favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorites" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            app:srcCompat="@android:drawable/ic_menu_info_details" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>