<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:textStyle="bold"
            android:text="@string/developers"
            android:textAlignment="center"
            android:textSize="70px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:textStyle="bold"
            android:text="@string/developedBy"
            android:textAlignment="center"
            android:textSize="70px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:text="44781 - Margarida Nunes"
            android:textAlignment="center"
            android:textSize="50px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:text="44815 - Rui Paças"
            android:textAlignment="center"
            android:textSize="50px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:text="44820 - Rodrigo Silva"
            android:textAlignment="center"
            android:textSize="50px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:textStyle="bold"
            android:text="@string/teacher"
            android:textAlignment="center"
            android:textSize="70px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:text="Fernando Carvalho"
            android:textAlignment="center"
            android:textSize="50px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:textStyle="bold"
            android:text="@string/api"
            android:textAlignment="center"
            android:textSize="70px" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>